z-index fix

--- a/janfidrman/styles.css
+++ b/janfidrman/styles.css
@@ -5,7 +5,7 @@ a {display: inline-block}
     background-color: rgb(0, 0, 0);
     width: auto;
     position: absolute;
-    z-index: 2;
+    z-index: 3;
     left: 0;
     top: 0;
     font-family: 'Fredoka One', cursive;
@@ -114,6 +114,7 @@ a {display: inline-block}
     display: block;
     margin: auto;
     margin-top: 15px;
+    z-index: 2;
     }
 
 .main-title-container img:hover{
